tests/compile-errors/src/no-provider-file.rs
#![feature(asm)]

usdt::dtrace_provider!("non-existent.d");

fn main() { }
